# batfish

./: .bazel-steward.yaml  .bazelignore  .bazelrc  .bazelversion  .codecov.yml  .gitattributes  .gitignore  .mcp.json  .pre-commit-config.yaml  .prettierrc.yaml  .roo-config.json  .roomodes  .spr.yml  .travis.yml  .trivyignore  BUILD  BUILD.bazel  Batfish-java-style.xml  CHANGES.md  CONTRIBUTING.md  GRAMMAR_FIXES_SUMMARY.md  GRAMMAR_IMPROVEMENTS.md  INSTALL.md  LICENSE.3RD-PARTIES  MODULE.bazel  README  README-DEV.md  README.CYGWIN  README.OSX  README.client  README.developers  README.md  WORKSPACE  abc  batfish  batfish.dockerfile  bazel-steward.yaml  build.xml  library_deps.bzl  log4j.yaml  (+6 more)
networks/: BUILD  BUILD.bazel
networks/campus-example/: README.md
networks/cloud-azure/azure_configs/: VM-vnet.json  VM1-nsg.json  VM1-public-ip.json  VM1.json  VM2-nsg.json  VM2.json  nat-gateway-ip.json  nat-gateway.json  subnet-nsg.json  vm1346.json  vm235.json
networks/dc-as-reuse/configs/: pod_0_tor_0
networks/disable-as-suppression/configs/: as1r2.cfg
networks/example/: README.md  testrig_positions
networks/example-isp-switchover-1/configs/: as1border1.cfg  as1border2.cfg  as2border1.cfg  as2core1.cfg  as2dept1.cfg  as2dist1.cfg  as2dist2.cfg
networks/example-isp-switchover-2/configs/: as2border2.cfg  as2dist2.cfg  as3core1.cfg
networks/example-juniper/configs/: as1border2.cfg
networks/example-nsdi/configs/: c2.cfg  n10.cfg
networks/example-with-delta/configs/: as1border2.cfg  as2border2.cfg  as2core1.cfg
networks/example/live-with-bgp-announcements/: external_bgp_announcements.json
networks/example/live-with-interface-outage/: interface_blacklist
networks/example2/configs/: bb1-core-01.cfg  dc1-border-01.cfg  dc1-border-02.cfg
networks/fattree-examples/fattree2/: commands-concrete
networks/fullmesh-examples/fullmesh10/: commands-abstract  commands-concrete
networks/gns3-nat/configs/: R1-Blue.cfg  R2-Blue.cfg
networks/hybrid-cloud-aws/configs/: lhr-border-02.cfg
networks/indirection/configs/: n2
networks/ios_rt/configs/: lhr-fw-01.cfg  lhr-leaf-02.cfg  lhr-spine-01.cfg  lhr-spine-02.cfg
networks/iptables-firewall/: README.md
networks/iptables-firewall/configs/: r1.cfg  r3.cfg  z1-firewall.cfg  z2-firewall.cfg
networks/iptables-firewall/hosts/: z1-host2.json
networks/iptables-firewall/iptables/: z1-firewall.v4  z2-firewall.v4
networks/isis/configs/: A1Border.cfg  A1Inter.cfg  A2Inter.cfg  ISP.cfg
networks/jellyfish-examples/jellyfish10/: commands-abstract  commands-concrete
networks/old-example-with-delta/: node_roles
networks/old-example-with-delta/configs/: as1border1.cfg
networks/old-example-with-delta/hosts/: host1.json
networks/old-example/configs/: as1border2.cfg  as2border2.cfg  as2dept1.cfg  as2dist1.cfg  as2dist2.cfg  as3border1.cfg  as3border2.cfg
networks/optional_files/: README.md  example_layer1_topology.json
networks/policy-routing/configs/: SL.cfg
networks/ring-examples/ring10/: commands-abstract  commands-concrete
networks/route-leak-2/configs/: as65000_R2.cfg  as65000_R3.cfg
projects/allinone/: .classpath  .gitignore  .project  BUILD  BUILD.bazel  allinone  build.xml  doxygen.cfg  pom.xml
projects/allinone/ant-doxygen/: AUTHORS  LICENSE
projects/allinone/lib/: README
projects/batfish-code-runner/: BUILD.bazel  README.md
projects/batfish-common-protocol/: .classpath  .gitignore  .project  BUILD  BUILD.bazel  ant-contrib  ant-junit  build.xml  doxygen.cfg  pom.xml
projects/batfish-common-protocol/.externalToolBuilders/: org.eclipse.xtext.ui.shared.xtextBuilder.launch
projects/client/: BUILD  BUILD.bazel  pom.xml
projects/common/: BUILD.bazel
projects/minesweeper/: .project  BUILD  BUILD.bazel  pom.xml
skylark/pmd/: BUILD.bazel  pmd-ruleset.xml
tests/questions/experimental/: BUILD  BUILD.bazel  a10VirtualServerConfiguration.ref  aclReachability.ref  bddMultipathConsistency.ref  bddReducedReachability.ref  bgpPeerConfiguration.ref  bgpProcessConfiguration.ref  bgpProperties.ref  bgpSessionCompatibility.ref  bgpSessionStatus.ref  bidirectionalReachability.ref  bidirectionalTraceroute.ref  commands  compareFilters.ref  detectLoops.ref  differentialReachability.ref  evpnL3VniProperties.ref  f5BigipVipConfiguration.ref  filterLineReachability.ref  filterTable.ref  findMatchingFilterLines.ref  findMatchingFilterLines.ref.testout  hsrpProperties.ref  interfaceMtu.ref  interfaceProperties.ref  loopbackMultipathConsistency.ref  mlagProperties.ref  multipathConsistency.ref  namedStructures.ref  neighbors.ref  nodeProperties.ref  nodes.ref  ospfAreaConfiguration.ref  ospfInterfaceConfiguration.ref  ospfProcessConfiguration.ref  ospfProperties.ref  (+27 more)
tools/: .gitignore  BUILD  BUILD.bazel  README.md  VALIDATE_GRAMMAR_RULES.md  batfish_functions.sh  bazel_run.sh  bdd_benchmarks.sh  client_upload.sh  code_deploy.sh  common.sh  completion-allinone.sh  completion-batfish-client.sh  completion-batfish.sh  completion-coordinator.sh  completion.sh  destination.sh  failure.sh  fix_java_format.sh  generate_pan_apps.py  genlb  html_deploy.sh  install_z3.sh  install_z3_cygwin.sh  install_z3_osx.sh  install_z3_rhel_x86_64.sh  install_z3_ubuntu.sh  install_z3_ubuntu_14.04.sh  install_z3_ubuntu_16.04.sh  log4j2.yaml  modular.sh  multipath.sh  nsdi_demo.sh  owasp-suppressions.xml  package_rpm.sh  package_ubuntu.sh  questions_page.py  role_reachability.sh  role_transit.sh  run_checkstyle.sh  (+8 more)
tools/bdd/: BUILD  SnapshotBddLeakTests.java
tools/benchmarks/: BUILD  BUILD.bazel  BenchmarkIpWildcardToBdd.java  BenchmarkOneHot.java  BenchmarkOnehot.java  BenchmarkOrAll.java  BenchmarkStreamDecoder.java  SnapshotBddBenchmarks.java  jmh.bzl  jmh_maven_install.json
tools/checkstyle/: BUILD.bazel  checkstyle.sh
tools/dd/: DD.py  README.md  main.py
tools/format/: BUILD.bazel  format.sh
tools/jol/: BUILD  BUILD.bazel  jol.bzl  jol_maven_install.json  run_jol.sh
tools/profiling/: ARCHITECTURE.md  BUILD.bazel  README.md  analyze_profile.py  profile.sh
tools/stress_tests/: BUILD  BUILD.bazel  SnapshotBddStressTests.java
(+34093 files in other folders)
