package(default_visibility = ["//visibility:public"])

filegroup(
    name = "example",
    srcs = glob(["example/**"]),
)

filegroup(
    name = "iptables-firewall",
    srcs = glob(["iptables-firewall/**"]),
)

filegroup(
    name = "hybrid-cloud-aws",
    srcs = glob(["hybrid-cloud-aws/**"]),
)

filegroup(
    name = "cloud-azure",
    srcs = glob(["cloud-azure/**"]),
)
