load("@rules_java//java:defs.bzl", "java_binary")
load("@batfish//skylark:thin_jar.bzl", "thin_jar")

package(default_visibility = ["//visibility:public"])

java_binary(
    name = "allinone_main",
    main_class = "org.batfish.allinone.Main",
    runtime_deps = [
        "//projects/allinone/src/main/java/org/batfish/allinone",
        "//projects/minesweeper",
        "//projects/question/src/main/java/org/batfish/question",
        "@maven//:org_apache_logging_log4j_log4j_core",
        "@maven//:org_apache_logging_log4j_log4j_slf4j_impl",
    ],
)

# A "thin" library JAR bundling Batfish's own modules (plus a couple of external
# deps that are awkward to obtain from Maven), but excluding the rest of the
# third-party dependencies. Intended for embedding Batfish as a library in a
# build that supplies the third-party dependencies itself (e.g. a Maven project).
thin_jar(
    name = "batfish_thin.jar",
    include_external = [
        "automaton",
        "parboiled",
    ],
    deps = [
        "//projects/allinone/src/main/java/org/batfish/allinone",
        "//projects/minesweeper",
        "//projects/question",
    ],
)

# Deprecated
alias(
    name = "allinone_with_minesweeper_main",
    actual = ":allinone_main",
)

alias(
    name = "allinone",
    actual = "//projects/allinone/src/main/java/org/batfish/allinone",
)
