load("@rules_java//java:defs.bzl", "java_binary")
load("@batfish//skylark:thin_jar.bzl", "thin_jar")

package(default_visibility = ["//visibility:public"])

java_binary(
    name = "allinone_main",
    main_class = "org.batfish.allinone.Main",
    runtime_deps = [
        "//projects/allinone/src/main/java/org/batfish/allinone",
        "//projects/minesweeper",
        "//projects/question/src/main/java/org/batfish/question",
        "@maven//:org_apache_logging_log4j_log4j_core",
        "@maven//:org_apache_logging_log4j_log4j_slf4j_impl",
    ],
)

# A "thin" library JAR bundling only Batfish's own modules, excluding all
# third-party dependencies. Intended for embedding Batfish as a library in a
# build that supplies the third-party dependencies itself (e.g. a Maven project).
#
# `allinone` transitively brings in every vendor parser, the data plane, and the
# question and symbolic libraries; `minesweeper` is a separate top-level module
# that allinone does not depend on, so it must be listed explicitly. (There is no
# need to list `//projects/question`: allinone already pulls in the same classes.)
thin_jar(
    name = "batfish_thin.jar",
    deps = [
        "//projects/allinone/src/main/java/org/batfish/allinone",
        "//projects/minesweeper",
    ],
)

# Deprecated
alias(
    name = "allinone_with_minesweeper_main",
    actual = ":allinone_main",
)

alias(
    name = "allinone",
    actual = "//projects/allinone/src/main/java/org/batfish/allinone",
)
