load("@rules_java//java:defs.bzl", "java_binary")

package(default_visibility = ["//visibility:public"])

exports_files(["pmd-ruleset.xml"])

java_binary(
    name = "pmd",
    main_class = "net.sourceforge.pmd.cli.PmdCli",
    runtime_deps = [
        "@maven//:net_sourceforge_pmd_pmd_cli",
        "@maven//:net_sourceforge_pmd_pmd_java",
    ],
)
