load("@rules_java//java:defs.bzl", "java_binary")
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")

package(default_visibility = ["//visibility:public"])

# google-java-format launcher using Bazel's hermetic JDK. The jvm_flags
# replicate the Add-Exports entries the all-deps jar's manifest carries
# (which java_binary does not honor).
java_binary(
    name = "google_java_format",
    jvm_flags = [
        "--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
    ],
    main_class = "com.google.googlejavaformat.java.Main",
    runtime_deps = ["@maven//:com_google_googlejavaformat_google_java_format_all_deps"],
)

sh_binary(
    name = "format.check",
    srcs = ["format.sh"],
    args = ["check"],
    data = [":google_java_format"],
    deps = ["@bazel_tools//tools/bash/runfiles"],
)

sh_binary(
    name = "format.fix",
    srcs = ["format.sh"],
    args = ["fix"],
    data = [":google_java_format"],
    deps = ["@bazel_tools//tools/bash/runfiles"],
)
