load("@rules_python//python:defs.bzl", "py_binary")

package(default_visibility = ["//visibility:public"])

# Platform-specific config settings for selecting appropriate profiler library
# These are used to select the correct native library based on the target platform
config_setting(
    name = "linux_x86_64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
)

config_setting(
    name = "linux_aarch64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:aarch64",
    ],
)

config_setting(
    name = "macos",
    constraint_values = [
        "@platforms//os:macos",
    ],
)

# Extract platform-specific native profiler libraries from Maven JARs
# Each JAR contains the async-profiler native library for a specific platform
genrule(
    name = "extract_linux_x64",
    srcs = ["@maven//:tools_profiler_async_profiler_linux_x64"],
    outs = ["libasyncProfiler_linux_x64.so"],
    cmd = "unzip -p $< linux-x64/libasyncProfiler.so > $@",
)

genrule(
    name = "extract_linux_arm64",
    srcs = ["@maven//:tools_profiler_async_profiler_linux_arm64"],
    outs = ["libasyncProfiler_linux_arm64.so"],
    cmd = "unzip -p $< linux-arm64/libasyncProfiler.so > $@",
)

genrule(
    name = "extract_macos",
    srcs = ["@maven//:tools_profiler_async_profiler_macos"],
    outs = ["libasyncProfiler_macos.so"],
    cmd = "unzip -p $< macos/libasyncProfiler.so > $@",
)

# Platform-specific native library selection
# This target selects the appropriate extracted library based on the execution platform
filegroup(
    name = "native_libs",
    srcs = select({
        ":linux_x86_64": [":extract_linux_x64"],
        ":linux_aarch64": [":extract_linux_arm64"],
        ":macos": [":extract_macos"],
    }),
)

# Automated profile analysis for CI and regression detection
py_binary(
    name = "analyze_profile",
    srcs = ["analyze_profile.py"],
    python_version = "PY3",
)
