load("@rules_java//java:java_binary.bzl", "java_binary")

java_binary(
    name = "snapshotBddStressTests",
    testonly = True,
    srcs = ["SnapshotBddStressTests.java"],
    main_class = "tools.stress_tests.SnapshotBddStressTests",
    deps = [
        "//projects/allinone",
        "//projects/batfish",
        "//projects/batfish:batfish_testlib",
        "//projects/bdd",
        "//projects/common",
        "@maven//:com_google_guava_guava",
        "@maven//:org_apache_logging_log4j_log4j_core",
        "@maven//:org_apache_logging_log4j_log4j_slf4j_impl",
    ],
)
